Edit SignUp page

--- a/src/app/user/signup/signup.component.html
+++ b/src/app/user/signup/signup.component.html
@@ -74,7 +74,7 @@
       <div class="form-group">
         <label
           for="usrName"
-          class="control-label">Username</label>
+          class="control-label">Mail</label>
         <input
           type="text"
           id="usrName"
