Add ids to buttons

--- a/src/app/bill/bill-input/bill-input.component.html
+++ b/src/app/bill/bill-input/bill-input.component.html
@@ -30,7 +30,7 @@
           class="form-control text-center"
           required>
       </div>
-      <button class="btn btn-primary" type="submit" [disabled]="billForm.invalid">Submit</button>
+      <button class="btn btn-primary" type="submit" id="submit_btn" [disabled]="billForm.invalid">Submit</button>
     </form>
   </div>
 </div>
