--- a/src/app/user/signin/signin.component.html
+++ b/src/app/user/signin/signin.component.html
@@ -30,7 +30,7 @@
           class="form-control text-center"
           required>
       </div>
-      <button class="btn btn-primary" type="submit" [disabled]="usrForm.invalid">Submit</button>
+      <button class="btn btn-primary" type="submit" id="login_btn" [disabled]="usrForm.invalid">Login</button>
     </form>
     <div class="loader" *ngIf="isLoading"></div>
   </div>
