Fix onStoreData Error

--- a/src/app/bill/bill-input/bill-input.component.html
+++ b/src/app/bill/bill-input/bill-input.component.html
@@ -74,7 +74,7 @@
 <div class="row">
   <div class="col-xs-12 col-sm-10 col-md-6 cold-sm-offset-1 col-md-offset-3 text-center">
     <div class="alert alert-danger" *ngIf="couldNotLoadData">An error occurred, please try again or submit new data!</div>
-    <button class="btn btn-primary" (click)="onStoreData()">Data stored on the server!</button> 
+  <!--  <button class="btn btn-primary" (click)="onStoreData()">Data stored on the server!</button> -->
     <div class="loader" *ngIf="isLoading">Loading...</div>
   </div>
 </div>
